plugins/kotlin/idea/tests/testData/multiplatform/extensionOnExpect/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>E<!> {
    fun <!LINE_MARKER("descr='Has actuals in jvm module'")!>commonMember<!>()
}
